allow to read included modules directly from github-poms